@@ -30,6 +30,7 @@ Cue Ball Wizard (Spanish / Vifico license)
 High Speed (G-4 aka German PROTO4)
 Soccer Kings (alternate set 2)
 Super Mario Bros. (Spanish / Vifico license) (rev.1 and (most likely) rev.2)
+Transporter the Rescue L-3 (Fixed Jackpot MOD)
 Victory (tournament/competition MOD 1.1 & 1.2 & 1.3)
 
 
